feat: add dark mode toggle and theme management to the dashboard

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
                         <span>Auto-refresh (15s)</span>
                     </label>
                     <span id="refreshCountdown" class="countdown"></span>
+                    <label class="theme-toggle" title="Toggle dark mode">
+                        <input type="checkbox" id="themeToggle">
+                        <span class="light-icon">☀️</span>
+                        <span class="dark-icon">🌙</span>
+                    </label>
                     <label class="mute-toggle" title="Mute notification sounds">
                         <input type="checkbox" id="muteToggle">
                         <span class="mute-icon">🔔</span>
